--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <h3>My Introduction</h3>
                             <!-- about me -->
                             <p>
-                                Enthusiastic and skilled University Student with a passion for crafting seamless user experiences. A dedicated Frontend Developer with years of hands-on experience, apedt at transforming design concepts into dynamic and responsive web applications. Proficient in HTML, CSS and JavaScript, with a keen eye for detail and a commitment to delivering visually appealing and intuitive interfaces.
+                                Enthusiastic and skilled University Student with a passion for crafting seamless user experiences. A dedicated Frontend Developer, apedt at transforming design concepts into dynamic and responsive web applications. Proficient in HTML, CSS and JavaScript, with a keen eye for detail and a commitment to delivering visually appealing and intuitive interfaces.
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
@@ -124,7 +124,7 @@
                     <div class="project-box">
                         <i class="uil uil-award"></i>
                         <h3>Experience</h3>
-                        <label>2+ Years in the field</label>
+                        <label>2+ Years of coding</label>
                     </div>
                 </div>
             </section>
